--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
             <table>
                 <tr>
                     <th>No.of Notes</th>
-                    <td></td>
+                    <td class="no-of-notes"></td>
+                    <td class="no-of-notes"></td>
+                    <td class="no-of-notes"></td>
+                    <td class="no-of-notes"></td>
+                    <td class="no-of-notes"></td>
+                    <td class="no-of-notes"></td>
+                    <td class="no-of-notes"></td>
                 </tr>
                 <tr>
                     <th>Note</th>
