--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css" />
     <title>Cash-register-app</title>
 </head>
 <body>
-    <div className="App">
-        <h2 className="heading">💸Cash Register Manager💸</h2>
+    <div class="app">
+        <h2 class="heading">💸Cash Register Manager💸</h2>
         <p class="description">Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
         <label for="bill-amount">Bill Amount:</label>
         <input id="bill-amount"/>
